manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-counter-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-counter-app
  template:
    metadata:
      labels:
        app: redis-counter-app
    spec:
      containers:
      - name: redis-counter-app
        image: ramon1743/redis-counter-app:5a75333
        ports:
        - containerPort: 5000
