manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-counter-app-service
spec:
  selector:
    app: redis-counter-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
